# fetchyt

./: .gitattributes  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: fetchyt.hpp  util.hpp
lib/: libcurl.la
lib/pkgconfig/: libcurl.pc
src/: fetchyt.cpp  main.cpp  util.cpp
